--- a/.github/workflows/npm-publish-canyon-ui.yml
+++ b/.github/workflows/npm-publish-canyon-ui.yml
@@ -25,6 +25,6 @@ jobs:
           node-version: 18
           registry-url: https://registry.npmjs.org/
       - run: pnpm install
-      - run: pnpm publish -f --no-git-checks --access=public --filter
+      - run: pnpm publish -f --no-git-checks --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NODE_AUTH_TOKEN}}
