--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "vite build",
     "prepare": "vite build",
-    "do-test": "vitest run --coverage"
+    "test": "vitest run --coverage"
   },
   "devDependencies": {
     "@types/istanbul-lib-coverage": "^2.0.5",
